[package]
name = "hyper_gol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
isahc = { version = "1.7.2", features = ["text-decoding"] }
bytebuffer = { version = "0.2.1" }
widestring = { version = "1.0.2" }
byte-slice-cast = { version = "1.2.1" }
byteorder = { version = "1.4.3" }
futures = "0.3.26"
